--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,49 @@ body {
     box-sizing: border-box;
 }
 
-#column1 {
-    border: black solid;
-    height: 50vh;
+#container1{
+    height: 150vh;
+    border: solid red ;
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.808) ,rgba(255, 255, 0, 0.699), rgb(102, 255, 0));
+}
+
+#row1 {
+    /* border: black solid; */
+    border-radius: 3%;
+    height: 50%;
+    background-color: rgba(180, 70, 70, 0.5);
+
+}
+
+h2{
+    margin-top: 6%;
+   text-align: center;
+    font-weight: bolder;
+}
+h4{
+    text-align: center;
+}
+
+.h-one {
+    text-align: center;
+    font-size: 500%;
+}
+
+.landing{
+    width: 99%;
+    height: 100%;
+    border-radius: 5% 5%;
+    margin: auto;
+    
+}
+
+.img1 {
+    width: 100%;
+    height: 75%;
+}
+
+p{
+    width: 70%;
+    margin: auto;
+    padding: 2%;
 }
