--- a/css/styles.css
+++ b/css/styles.css
@@ -5,21 +5,25 @@ body {
 }
 
 #container1{
-    height: 150vh;
+    height: 100vh;
     border: solid red ;
     background-image: linear-gradient(to right, rgba(255, 0, 0, 0.808) ,rgba(255, 255, 0, 0.699), rgb(102, 255, 0));
+}
+
+#container-2{
+    width: 100%;
 }
 
 #row1 {
     /* border: black solid; */
     border-radius: 3%;
-    height: 50%;
+    /* height: 80vh; */
     background-color: rgba(180, 70, 70, 0.5);
 
 }
 
+
 h2{
-    margin-top: 6%;
    text-align: center;
     font-weight: bolder;
 }
@@ -32,21 +36,22 @@ h4{
     font-size: 500%;
 }
 
-.landing{
-    width: 99%;
-    height: 100%;
-    border-radius: 5% 5%;
-    margin: auto;
-    
-}
 
-.img1 {
-    width: 100%;
-    height: 75%;
-}
+
 
 p{
     width: 70%;
     margin: auto;
     padding: 2%;
+}
+ 
+form {
+    width: 80%;
+    /* padding: 5%; */
+}
+
+#submit {
+    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.808) ,rgba(255, 255, 0, 0.699), rgb(102, 255, 0));
+    width: 25%;
+    border-radius: 10PX;
 }
